# llm_api_factory

./: .gitignore  README.md  example_usage.py  next.md  plan.md  progress.md  proto.html  requirements.txt  setup.py  task.md
backend/: pyproject.toml  tmp.py
backend/app/: cli.py  main.py
backend/app/core/: config.py  http_client.py  providers.py  redis.py  route_exposure.py  timezone.py
backend/app/db/: migrations.py  models.py  (+1 more)
backend/llm_api_factory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/scripts/: test_agent.py
backend/tests/: conftest.py  proxy_test_utils.py  test_admin_agents.py  test_admin_endpoints_detail.py  test_admin_health_status.py  test_admin_metrics_timeseries.py  test_admin_rules.py  test_agent_bootstrap.py  test_agent_client.py  test_agent_client_probe.py  test_agent_heartbeat.py  test_agent_heartbeat_auth.py  test_agent_services.py  test_agent_transport.py  test_agent_worker.py  test_alert_policies.py  test_alert_routes.py  test_audit_logs.py  test_auth_routes.py  test_background_tasks.py  test_billing.py  test_circuit_breaker_status.py  test_cli.py  test_codex_provider.py  test_config_defaults.py  test_database_backend.py  test_db_session.py  test_dump_index.py  test_endpoint_transport.py  test_health_monitor.py  test_health_probe_timeseries.py  test_memory_redis.py  test_metrics_timeseries.py  test_migrations.py  test_model_patterns.py  test_model_router_wrr.py  test_openai_proxy_access_key_routes.py  test_openai_proxy_agent_routes.py  test_openai_proxy_fallback_routes.py  test_openai_proxy_oauth_routes.py  (+12 more)
(+143 files in other folders)
