[project]
name = "llm_api_factory"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.26",
    "websockets>=12.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "SQLAlchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "redis>=5.0",
    "python-telegram-bot>=20.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "cryptography>=42",
    "regex>=2025.7.29",
]

[project.scripts]
llm-factory = "app.cli:main"
llm-agent = "app.services.agent_client:run_agent"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["."]
